--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,7 +6,7 @@ $button-color: #68b738;
 $button-color-hover: #5eaa2f;
 $opacity-txt-hover: 0.6;
 $opacity-txt-down: 0.3;
-$block-backgr-color: #f2f2f2;
+$block-backgr-color: #f2f2f2; /*Нужен ли*/
 $border: #d9d9d9;
 $icon-social-color: #666666;
 $border-color: #cdcdcd;
