--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -102,9 +102,13 @@
 
     padding: 20px 37px 17px;
 
-    border-top: 1px solid #e6e6e6;
-    border-left: 1px solid #e6e6e6;
-    border-right: 1px solid #e6e6e6;
+    border-top: 1px solid rgba($border-color, 0.5);
+    border-left: 1px solid rgba($border-color, 0.5);
+    border-right: 1px solid rgba($border-color, 0.5);
+
+    &:last-child {
+      border-bottom: 1px solid rgba($border-color, 0.5);
+    }
   }
 
   .products__caption {
@@ -122,7 +126,9 @@
   }
 
   .products__value {
-    min-width: 106px;
+    box-sizing: border-box;
+    // width: 95px;
+    min-width: 95px;
   }
 
   .products__btn {
@@ -181,7 +187,7 @@
   }
 
   .products__value {
-    box-sizing: border-box;
+    // box-sizing: border-box;
     min-width: 46px;
     text-align: start;
   }
