--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -119,7 +119,6 @@
   &--after {
     clip: rect(auto, auto, auto, 160px);
     z-index: 10;
-
   }
 }
 
@@ -133,14 +132,11 @@
   // padding-left: 4px;
 }
 
-
-
-.example__progress{
+.example__progress {
   position: relative;
 
   appearance: none;
   outline: none;
-  background: transparent;
 
   overflow: hidden;
 
@@ -156,7 +152,7 @@
 
   cursor: pointer;
 
-  @-moz-document url-prefix() {
+  @-moz-document url-prefix("") {
     height: 12px;
   }
 
@@ -179,8 +175,8 @@
   }
 
   &::-webkit-slider-thumb {
-    // position: relative;
-    -webkit-appearance: none;
+    // -webkit-appearance: none;
+    appearance: none;
     box-sizing: border-box;
 
     width: 6px;
@@ -252,7 +248,6 @@
   border: none;
 
   &:focus {
-    // border-bottom: none;
     outline: none;
   }
 }
@@ -291,11 +286,6 @@
   .example__list {
     min-width: 366px;
     margin: 0;
-  }
-
-  .example__item {
-    // margin: 23px 0;
-    // padding: 0;
   }
 
   .example__data {
@@ -337,13 +327,7 @@
     padding-top: 362px;
     padding-bottom: 70px;
 
-    background: linear-gradient(
-      to right,
-      $block-backgr-color 0,
-      $block-backgr-color 50%,
-      #eaeaea 50%,
-      #eaeaea 100%
-    );
+    background: linear-gradient(to right, $block-backgr-color 0, $block-backgr-color 50%, #eaeaea 50%, #eaeaea 100%);
   }
 
   .example__img {
@@ -361,17 +345,7 @@
     }
   }
 
-  .example__range {
-    // margin: 0 auto;
-
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-
-    // background: red;
-  }
-
-  .example__progress{
+  .example__progress {
     overflow: visible;
 
     width: 428px;
@@ -391,7 +365,7 @@
     }
 
 
-    @-moz-document url-prefix() {
+    @-moz-document url-prefix("") {
       height: 6px;
       background: #dcdcdc;
     }
@@ -454,7 +428,6 @@
       background: transparent;
       border: 22px solid transparent;
       border-width: 22px 0;
-
     }
 
     &::-ms-fill-lower {
@@ -558,13 +531,7 @@
     padding-right: calc((100vw - 1300px) / 2);
     margin-top: 0;
 
-    background: linear-gradient(
-      to right,
-      $block-backgr-color 0,
-      $block-backgr-color 365px,
-      #eaeaea 365px,
-      #eaeaea 100%
-    );
+    background: linear-gradient(to right, $block-backgr-color 0, $block-backgr-color 365px, #eaeaea 365px, #eaeaea 100%);
   }
 
   .example__img {
@@ -585,9 +552,8 @@
     padding-left: 40px;
   }
 
-  .example__progress{
+  .example__progress {
     margin-left: 21px;
     margin-right: 17px;
   }
-
 }
